replace PATCH /transactions endpoint with PUT
